--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,12 +7,28 @@
 body {
     height: 100vh;
     display: flex;
-    background-color: rgb(0, 255, 170);
+    
+}
+main {
+    margin-top: 48px;
+    background-color: teal;
+    perspective: 1000px;  
+      
+}
+
+aside{
+}
+
+main .cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 2%;
+    gap: 24px;
+    max-width: 800px;
+        
 }
 
 .memory-game {
-    width: 800px;
-    height: 600px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -20,16 +36,14 @@ body {
 }
 
 .memory-card {
-    width: calc(25% - 10px);
-    height: calc(30% - 10px);
+    height: 20vh;
     margin: 5px;
     position: relative;
     box-shadow: 1px 1px 1px rgba(0, 0, 0,.3);
     transform: scale(1);
     border-radius: 20px;
     transform-style: preserve-3d;
-    transition: transform .3s;
-
+    transition: transform .5s;
 }
 
 .front-face,
