--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Ubuntu', sans-serif;
-    color: var(--title-color);
+    color: var(--primary-color);
 }
 
 
