--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,13 +10,42 @@ body {
     
 }
 main {
+    display: flex;
     margin-top: 48px;
     background-color: teal;
-    perspective: 1000px;  
-      
+    perspective: 1000px;      
 }
 
-aside{
+main .aside{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 5px;
+    margin: 5px;
+}
+
+main .aside button {
+    width: 100%;
+    height: 56px;
+
+    background-color: var(--primary-color);
+    border-radius: 8px;
+
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+
+    border: 0;
+
+    margin-top: 40px;
+
+    transition: background-color 400ms;
+}
+
+main .aside button:disabled{
+    background-color: var(--title-color);
+    color: rgb(62, 68, 61);
+    transition: background-color 400ms;
 }
 
 main .cards {
@@ -25,18 +54,13 @@ main .cards {
     padding: 2%;
     gap: 24px;
     max-width: 800px;
-        
-}
-
-.memory-game {
-    margin: auto;
-    display: flex;
-    flex-wrap: wrap;
-    perspective: 1000px;
+            
 }
 
 .memory-card {
     height: 20vh;
+    width: 14vw;
+    max-width: 188px;
     margin: 5px;
     position: relative;
     box-shadow: 1px 1px 1px rgba(0, 0, 0,.3);
