Webkit added for mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,6 +84,7 @@ main .cards {
     border-radius: 20px;
     background-color: white;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .front-face {
