--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,48 +10,60 @@ body {
     
 }
 main {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 3fr 1fr;
     margin-top: 35px;
     background-color: teal;
-    perspective: 1500px;      
+    perspective: 1500px;   
+    border-radius: 10px;   
 }
 
-main .aside{
+main .cards {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start: 2;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 2%;
+    gap: 24px;   
+            
+}
+
+main .aside1 {
     display: flex;
     flex-direction: column;
     background-color: white;
     padding: 5px;
     margin: 5px;
-    max-width: 400px;
+    border-radius: 10px;
 }
 
-main .aside .boxes {
+main .aside2 {
+    grid-row-start: 2;
+
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    background-color: white;
     padding: 5px;
-    justify-content: center;
-    align-items: center;
-    flex: 1;
-
+    margin: 5px;
+    border-radius: 10px;
 }
 
-main .aside .button {
+
+main .aside2 .action{
     display: flex;
+    flex-direction: column;
     margin: 10px;
     align-items: center;
-    justify-content: space-between;
     margin-right: 15px;
+    padding: 20px;
+    justify-content: space-between;
 }
 
-.boxes h4 {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    color: black;
-}
-
-main .aside button {
-    width: 100px;
+main .aside2 button {
+    width: 100%;
     height: 60px;
 
 
@@ -61,37 +73,23 @@ main .aside button {
     color: white;
     font-weight: bold;
     font-size: 16px;
+    padding: 10px;
 
     border: 0;
-
-    margin-top: 20px;
-
+    margin-bottom: 20px;
     transition: background-color 400ms;
 }
 
-main .aside button:disabled{
+main .aside2 button:disabled{
     background-color: var(--title-color);
     color: rgb(62, 68, 61);
     transition: background-color 400ms;
 }
 
-main .cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding: 2%;
-    gap: 24px;
-    width: 800px;
-    height: 600px;
-    margin-right: 100px;
-    margin-bottom: 100px;
-    
-            
-}
-
 .memory-card {
-    height: 180px;
+    /* height: 180px;
     width: 14vw;
-    max-width: 180px;
+    max-width: 180px; */
     margin: 5px;
     position: relative;
     box-shadow: 1px 1px 1px rgba(0, 0, 0,.3);
