--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,14 +31,32 @@ main .cards {
             
 }
 
-main .aside1 {
+main .aside1 {    
+    background-color: #f5f5f5;
+    border-radius: 8px;
+
+    padding: 32px 24px 16px;
+
     display: flex;
     flex-direction: column;
-    background-color: white;
-    padding: 5px;
+    align-items: center;
+    justify-content: space-evenly;
+
+    text-align: center;
     margin: 15px;
     margin-right: 0;
-    border-radius: 10px;
+}
+
+main .aside1 h3{
+    margin-top: 10px;
+}
+
+main .aside1 h4{
+    color: black;
+}
+
+main .aside1 .hide{
+    display: none;
 }
 
 main .aside2 {
@@ -89,9 +107,6 @@ main .aside2 button:disabled{
 }
 
 .memory-card {
-    /* height: 180px;
-    width: 14vw;
-    max-width: 180px; */
     margin: 5px;
     position: relative;
     box-shadow: 1px 1px 1px rgba(0, 0, 0,.3);
@@ -125,3 +140,6 @@ main .aside2 button:disabled{
 .memory-card.flip {
     transform: rotateY(180deg);
   }
+
+
+  
