--- a/styles/search.css
+++ b/styles/search.css
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #page-search-results header a span {
     margin-right: 16px;
-    background-image: url(../assets/arrow-left.svg);
+    background-image: url(../img/arrow-left.svg);
 
     display: flex;
 
