--- a/styles/base.css
+++ b/styles/base.css
@@ -16,6 +16,7 @@ html {
 body {
     background: #f0f0f5;
     -webkit-font-smoothing: antialiased;
+    max-height: 700px;
 }
 
 a {
@@ -28,22 +29,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
-#page-search-results {
+#page {
     width: 90%;
     max-width: 1400px;
+    max-height: 700px;
 
     margin: 0 auto;
 }
 
-#page-search-results header{
-    margin-top: 48px;
+#page header{
+    margin-top: 40px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-#page-search-results header a{
+#page header a{
     color: var(--title-color);
     font-weight: bold;
 
@@ -51,7 +53,7 @@ h1, h2, h3, h4, h5, h6 {
     align-items: center;
 }
 
-#page-search-results header a span {
+#page header a span {
     margin-right: 16px;
     background-image: url(../img/arrow-left.svg);
 
